--- a/src/components/catalog-item/catalog-item.styes.scss
+++ b/src/components/catalog-item/catalog-item.styes.scss
@@ -9,7 +9,7 @@
 
     @media screen and (max-width: 700px) {
         align-items: center;    
-        width: 100%;
+        width: auto;
     }
 
     .to-collection-button {
