--- a/src/pages/catalog/catalog.styles.scss
+++ b/src/pages/catalog/catalog.styles.scss
@@ -1,17 +1,12 @@
 .catalog-page {
-    @media screen and (max-width: 700px) {
-        padding: 0 20px;
-    }
-
     .list {
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
 
         @media screen and (max-width: 700px) {
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            grid-gap: 20px 0px
+            padding: 0 5px;
+            justify-content: space-around;
         }
 
         .catalog-item {
