--- a/src/components/title-genres/title-genres.styles.scss
+++ b/src/components/title-genres/title-genres.styles.scss
@@ -15,6 +15,7 @@
     }
 
     .genre-item {
+        width: auto;
         height: 26px;
         border: 1px solid $gray;
         border-radius: 5px;
