--- a/src/pages/collection/collection.styles.scss
+++ b/src/pages/collection/collection.styles.scss
@@ -58,6 +58,11 @@
         margin-bottom: 40px;
         background-color: $gray;
 
+        @media screen and (max-width: 700px) {
+            margin-bottom: 15px;
+        }
+        
+
         .empty-alert {
             display: flex;
             justify-content: center;
