--- a/src/components/collection-item/collection-item.styles.scss
+++ b/src/components/collection-item/collection-item.styles.scss
@@ -25,8 +25,9 @@
         .poster {
             width: 40px;
             height: 50px;
+            border: 1px solid $purple;
             margin: 0 10px;
-            background-size: contain;
+            background-size: cover;
             background-repeat: no-repeat;
 
             @media screen and (max-width: 700px) {
