--- a/src/components/popup-item/popup-item.styles.scss
+++ b/src/components/popup-item/popup-item.styles.scss
@@ -4,12 +4,17 @@
     display: flex;
     flex-direction: column;
     padding: 5px;
-    border-top: 2px solid #000;
+    border-top: 2px solid $purple;
+    background-color: $white;
     color: unset;
     text-decoration: none;
 
     &:hover {
-        background-color: darken(#fff, 5%);
+        background-color: darken($white, 5%);
+    }
+
+    &:first-child {
+        border-top: unset;
     }
 
     .title {
@@ -17,7 +22,7 @@
         margin-bottom: 5px;
         text-align: center;
         font-size: 16px;
-        color: #000;
+        color: $dark-gray;
     }
 
     .sub-container {
@@ -30,6 +35,7 @@
 
         .poster {
             height: 120px;
+            border: 1px solid $purple;
         }
 
         .details {
@@ -40,6 +46,7 @@
             .detail-item {
                 font-size: 14px;
                 margin-bottom: 6px;
+                color: lighten($purple, 10%);
             }
         }
     } 
