small changes to components mapping

--- a/src/components/title-information/title-information.styles.scss
+++ b/src/components/title-information/title-information.styles.scss
@@ -2,6 +2,12 @@
 
 .information {
     margin-bottom: 20px;
+
+    &:hover {
+        .header {
+            color: #fff;
+        }
+    }
     
     @media screen and (max-width: 700px) {
         display: flex;
@@ -21,10 +27,31 @@
         color: $white;
     }
 
-
-    &:hover {
-        .header {
-            color: #fff;
+    .detail-line {
+        margin-bottom: 15px;
+    
+        .type {
+            display: inline-block;
+            padding-right: 10px;
+            font-size: 15px;
+            color: $gray;
+    
+            @media screen and (max-width: 700px) {
+                font-size: 18px;
+            }
+        }
+    
+        .value {
+            color: $white;
+            font-size: 16px;
+    
+            @media screen and (max-width: 700px) {
+                font-size: 19px;
+            }
+        }
+    
+        &:last-child {
+            margin-bottom: unset;
         }
     }
 }
